// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PeerForm should render 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="PeerForm"
  >
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc my-8"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Network
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              name="network"
              readonly=""
              tabindex="-1"
              value=""
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-0-menu"
            role="combobox"
          >
            <label
              for="downshift-0-input"
              id="downshift-0-label"
            />
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-0-menu"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                  data-testid="SelectDropdownInput__input"
                  id="downshift-0-input"
                  name="network"
                  placeholder="Select Network"
                  value=""
                />
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="py-2 px-1 text-theme-secondary-500 flex items-center justify-center"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="sc-bdfBwQ gLRWTb transition-transform "
                      height="5"
                      width="7"
                    >
                      <svg>
                        caret-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-0-label"
              class="styles__SelectOptionsList-b2falt-0 ghEDCU"
              id="downshift-0-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="name"
      >
        Name
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="PeerForm__name-input"
            name="name"
            value=""
          />
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="host"
      >
        Peer IP
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="PeerForm__host-input"
            name="host"
            value=""
          />
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <div
        class="flex flex-col space-y-2 w-full"
      >
        <div
          class="flex justify-between items-center space-x-5"
        >
          <span
            class="text-lg font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            Multisignature
          </span>
          <label
            class="flex"
          >
            <input
              class="Toggle__Input-qyyifx-0 WGuGL"
              data-testid="PeerForm__multisignature-toggle"
              name="isMultiSignature"
              type="checkbox"
            />
            <div
              class="Toggle__Handle-qyyifx-1 geejDn"
            >
              <span
                class="Toggle__HandleInner-qyyifx-2 ZjBSs"
              />
            </div>
          </label>
        </div>
        <span
          class="text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Toggle this setting if the IP points to a Multisignature peer.
        </span>
      </div>
    </fieldset>
    <div
      class="flex justify-end pt-8 border-t border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <button
        class="OriginalButton__StyledButton-sc-1y2wptt-0 fqRthJ"
        data-testid="PeerForm__submit-button"
        disabled=""
        type="submit"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Add Peer
        </div>
      </button>
    </div>
  </form>
</DocumentFragment>
`;

exports[`PeerForm should render the peer on the form 1`] = `
<DocumentFragment>
  <form
    class="space-y-8"
    data-testid="PeerForm"
  >
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc my-8"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="network"
      >
        Network
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="relative w-full"
      >
        <div
          class="Input__InputWrapperStyled-wu99qs-0 jYUFQr sr-only"
        >
          <div
            class="relative flex flex-1 h-full"
          >
            <input
              class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
              data-testid="select-list__input"
              name="network"
              readonly=""
              tabindex="-1"
              value="ark.devnet"
            />
          </div>
        </div>
        <div
          class="relative w-full"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            aria-owns="downshift-22-menu"
            role="combobox"
          >
            <label
              for="downshift-22-input"
              id="downshift-22-label"
            />
            <div
              class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
            >
              <div
                class="relative flex flex-1 h-full"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="downshift-22-menu"
                  aria-labelledby="downshift-22-label"
                  autocomplete="off"
                  class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full cursor-default"
                  data-testid="SelectDropdownInput__input"
                  id="downshift-22-input"
                  name="network"
                  placeholder="Select Network"
                  value="ARK Devnet"
                />
                <span
                  class="absolute inset-y-0 flex items-center font-normal opacity-50 pointer-events-none cursor-default"
                  data-testid="Input__suggestion"
                >
                  ARK Devnet
                </span>
              </div>
              <div
                class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              >
                <div
                  class=""
                >
                  <div
                    class="py-2 px-1 text-theme-secondary-500 flex items-center justify-center"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="sc-bdfBwQ gLRWTb transition-transform "
                      height="5"
                      width="7"
                    >
                      <svg>
                        caret-down.svg
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <ul
              aria-labelledby="downshift-22-label"
              class="styles__SelectOptionsList-b2falt-0 ghEDCU"
              id="downshift-22-menu"
              role="listbox"
            />
          </div>
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="name"
      >
        Name
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="PeerForm__name-input"
            name="name"
            value="ROBank"
          />
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <label
        class="flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-text"
        data-testid="FormLabel"
        for="host"
      >
        Peer IP
        <div
          class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
          data-testid="FormLabel__required"
        />
      </label>
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="PeerForm__host-input"
            name="host"
            value="http://167.114.29.48:4003/api"
          />
        </div>
      </div>
    </fieldset>
    <fieldset
      class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
    >
      <div
        class="flex flex-col space-y-2 w-full"
      >
        <div
          class="flex justify-between items-center space-x-5"
        >
          <span
            class="text-lg font-semibold text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            Multisignature
          </span>
          <label
            class="flex"
          >
            <input
              class="Toggle__Input-qyyifx-0 WGuGL"
              data-testid="PeerForm__multisignature-toggle"
              name="isMultiSignature"
              type="checkbox"
            />
            <div
              class="Toggle__Handle-qyyifx-1 geejDn"
            >
              <span
                class="Toggle__HandleInner-qyyifx-2 ZjBSs"
              />
            </div>
          </label>
        </div>
        <span
          class="text-sm font-medium text-theme-secondary-500 dark:text-theme-secondary-700"
        >
          Toggle this setting if the IP points to a Multisignature peer.
        </span>
      </div>
    </fieldset>
    <div
      class="flex justify-end pt-8 border-t border-theme-secondary-300 dark:border-theme-secondary-800"
    >
      <button
        class="OriginalButton__StyledButton-sc-1y2wptt-0 dYkFxS"
        data-testid="PeerForm__submit-button"
        type="submit"
      >
        <div
          class="flex relative items-center space-x-2"
        >
          Edit Peer
        </div>
      </button>
    </div>
  </form>
</DocumentFragment>
`;
